--- a/index.html
+++ b/index.html
@@ -7,13 +7,69 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Milind Kumar Sahu | Full Stack Web Developer</title>
+    <meta
+      name="description"
+      content="Front-end developer passionate about creating fast, responsive web applications. Expertise in React.js, Node.js, and modern frameworks."
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://milindsahu.com" />
+
+    <!-- Robots meta tag -->
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+
+    <!-- Open Graph tags -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Milind Kumar Sahu | Front-End React Developer"
+    />
+    <meta
+      property="og:description"
+      content="Front-end developer specializing in React.js, creating responsive and optimized web applications. Explore my projects in e-commerce, music streaming, and travel platforms."
+    />
+    <meta property="og:url" content="https://milindsahu.com/" />
+    <meta
+      property="og:image"
+      content="/images/front-end-developer-milind-kumar-sahu.png"
+    />
+
+    <!-- Open Graph tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Milind Kumar Sahu | Front-End React Developer"
+    />
+    <meta
+      name="twitter:description"
+      content="Front-end developer specializing in React.js, creating responsive and optimized web applications. Explore my projects in e-commerce, music streaming, and travel platforms."
+    />
+    <meta
+      name="twitter:image"
+      content="/images/front-end-developer-milind-kumar-sahu.png"
+    />
+
+    <!-- Additional SEO meta tags -->
+    <meta
+      name="keywords"
+      content="Milind Kumar Sahu, Front-End Developer, React Developer, JavaScript Developer, Web Developer India, React.js, Node.js, MongoDB, Full Stack Development, UI/UX Development, Responsive Web Design, Portfolio Website, Chhattisgarh Developer"
+    />
+    <meta name="author" content="Milind Kumar Sahu" />
+    <meta name="publisher" content="Milind Kumar Sahu" />
+
+    <!-- Favicon -->
     <link rel="shortcut icon" href="/images/favicon.svg" type="image/svg+xml" />
+
+    <!-- Google font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Material symbols rounded -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0"
